--- a/icecreamapp/templates/varieties/list.html
+++ b/icecreamapp/templates/varieties/list.html
@@ -2,15 +2,14 @@
 
 {% block content %}
     <h1>Varieties</h1>
-   {% comment %} <a href="{% url 'icecreamapp:variety_form' %}">Add New Variety</a> {% endcomment %}
-
+   <a href="{% url 'icecreamapp:variety_form' %}">Add New Variety</a>
     <ol>
     {% for variety in all_varieties %}
 
         <li>
             {% comment %} <a href="{% url 'icecreamapp:variety' variety.id%}"> {{variety.name}} </a> {% endcomment %}
             <p>Name: {{variety.name}}</p>
-            <p>Country of origin: {{variety.countrty_of_origin}}</p>
+            <p>Country of origin: {{variety.country_of_origin}}</p>
         </li>
     {% endfor %}
     </ol>
