--- a/icecreamapp/templates/varieties/list.html
+++ b/icecreamapp/templates/varieties/list.html
@@ -7,7 +7,7 @@
     {% for variety in all_varieties %}
 
         <li>
-            {% comment %} <a href="{% url 'icecreamapp:variety' variety.id%}"> {{variety.name}} </a> {% endcomment %}
+            <a href="{% url 'icecreamapp:variety' variety.id%}"> {{variety.name}} </a>
             <p>Name: {{variety.name}}</p>
             <p>Country of origin: {{variety.country_of_origin}}</p>
         </li>
